[workspace]
members = [
    "turf_macros",
    "turf_internals",
]
exclude = [
    "examples",
    "tests",
]

[package]
name = "turf"
version = "0.7.1"
edition = "2021"
description = "Build SCSS to CSS during compile time and inject those styles into your binary."
readme = "README.md"
license = "MIT"
authors = ["myFavShrimp <myfavshrimp@tuta.io>"]
repository = "https://github.com/myFavShrimp/turf"
documentation = "https://docs.rs/turf"
keywords = ["web", "CSS", "SCSS", "macro"]
categories = ["wasm", "web-programming"]
rust-version = "1.65"

[features]
once_cell = ["turf_macros/once_cell"]

[dependencies]

[dependencies.turf_macros]
path = "turf_macros"
version = "0.7.1"
