[workspace]
members = [
    "turf_macros",
    "turf_internals",
]
exclude = [
    "examples",
    "tests",
]

[workspace.package]
version = "0.9.2"
edition = "2021"
authors = ["myFavShrimp <myfavshrimp@tuta.io>"]
license = "MIT"
repository = "https://github.com/myFavShrimp/turf"
publish = true

[package]
name = "turf"
description = "Build SCSS to CSS during compile time and inject those styles into your binary."
documentation = "https://docs.rs/turf"
keywords = ["web", "CSS", "SCSS", "macro"]
categories = ["wasm", "web-programming"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]

[dependencies.turf_macros]
path = "turf_macros"
version = "0.9.2"
