[package]
name = "turf_internals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
toml = "0.7.0"
thiserror = "1.0"

[dependencies.stylist]
workspace = true

[dependencies.grass]
workspace = true


[package.metadata.turf]
load_paths = [
    "/abc",
    "/tmp",
]
output_style = "expanded"
