[package]
name = "turf_internals"
version = "0.7.1"
edition = "2021"
description = "The inner workings of turf."
license = "MIT"
authors = ["myFavShrimp <myfavshrimp@tuta.io>"]
readme = "README.md"
rust-version = "1.65"

[dependencies]
toml = "=0.7.0"
toml_edit = "=0.19.0"
thiserror = "1.0"
oorandom = "11.1.3"
getrandom = { version = "0.2.9", features = ["std"] }
regex = "1.10.2"
serde_spanned = "=0.6.3"
toml_datetime = "=0.6.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.lightningcss]
# the alpha version matches newer versions as well if pinned
version = "=1.0.0-alpha.47"
default-features = false
features = ["grid", "visitor"]

[dependencies.grass]
version = "0.13.0"
default-features = false

[dependencies.once_cell]
version = "1.18.0"
optional = true
