[package]
name = "turf_internals"
description = "The inner workings of turf."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
toml = "0.8.0"
thiserror = "1.0"
oorandom = "11.1.3"
getrandom = { version = "0.2.9", features = ["std"] }
regex = "1.10.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.lightningcss]
# the alpha version matches newer versions as well if pinned
version = "=1.0.0-alpha.53"
default-features = false
features = ["grid", "visitor"]

[dependencies.grass]
version = "0.13.0"
default-features = false
