[package]
name = "turf_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = { version = "1.0" }

[dependencies.turf_internals]
path = "../turf_internals"

[dependencies.stylist]
workspace = true

[dependencies.grass]
workspace = true
