[package]
name = "turf_macros"
description = "Macros used by turf."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
proc_macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0" }
convert_case = "0.6.0"

[dependencies.turf_internals]
path = "../turf_internals"
version = "0.7.1"
