[package]
name = "dioxus-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"

[dependencies.turf]
path = "../../lib/turf"

[package.metadata.turf]
load_paths = ["variables"]
minify = true

[package.metadata.turf.class_names]
template = "dioxus-example_<original_name>_<id>"

[package.metadata.turf.browser_targets]
chrome = [80, 1, 2]
firefox = 65
safari = [12, 3]
