[package]
name = "dioxus-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["web"] }

[dependencies.turf]
path = "../../"

[package.metadata.turf]
load_paths = ["variables"]
minify = true
browser_targets = [
    "firefox 65",
    "chrome 80",
    "safari 10",
]

[package.metadata.turf.class_names]
template = "dioxus-example_<original_name>_<id>"
