[package]
name = "leptos-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.leptos]
version = "0.4.6"
features = ["csr"]

[dependencies.turf]
path = "../../lib/turf"

[package.metadata.turf]
load_paths = ["variables"]
minify = true

[package.metadata.turf.class_names]
template = "leptos-example_<original_name>_<id>"

[package.metadata.turf.browser_targets]
chrome = [80, 1, 2]
firefox = 65
safari = [12, 3]

[package.metadata.turf.file_output]
global_css_file_path = "./test-global.css"
separate_css_files_path = "./test-separate/"
