[package]
name = "leptos-hash-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.leptos]
version = "0.7.8"
features = ["csr"]

[dependencies.turf]
path = "../../"

[package.metadata.turf]
load_paths = ["variables"]
minify = true
browser_targets = [
    "firefox 65",
    "chrome 80",
    "safari 10",
]

[package.metadata.turf.class_names]
template = "leptos-hash-example_<name_hash_short>_<style_sheet_hash_short>"
