[package]
name = "yew-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yew]
version = "0.20"
features = ["csr"]

[dependencies.turf]
path = "../../lib/turf"

[package.metadata.turf]
load_paths = ["variables"]
minify = true
class_name_template = "yew-example_<original_name>_<id>"

[package.metadata.turf.browser_targets]
chrome = [80, 81, 82]
firefox = 65
safari = [12, 13]
