[package]
name = "turf"
version = "0.6.0"
edition = "2021"
description = "Build SCSS to CSS during compile time and inject those styles into your binary."
readme = "../../README.md"
license = "MIT"
authors = ["myFavShrimp <myfavshrimp@tuta.io>"]
repository = "https://github.com/myFavShrimp/turf"
documentation = "https://docs.rs/turf"
keywords = ["web", "CSS", "SCSS", "macro"]
categories = ["wasm", "web-programming"]

[features]
once_cell = ["turf_macros/once_cell"]

[dependencies]

[dependencies.turf_macros]
path = "../turf_macros"
version = "0.6.0"
