[package]
name = "turf_internals"
version = "0.3.1"
edition = "2021"
description = "The inner workings of turf."
license = "MIT"
authors = ["myFavShrimp <myfavshrimp@tuta.io>"]
readme = "README.md"

[dependencies]
toml = "0.7.0"
thiserror = "1.0"
oorandom = "11.1.3"
getrandom = "0.2.9"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.lightningcss]
version = "1.0.0-alpha.41"
default-features = false
features = ["grid", "visitor"]

[dependencies.grass]
version = "0.12"
default-features = false
