[package]
name = "turf_internals"
version = "0.4.0"
edition = "2021"
description = "The inner workings of turf."
license = "MIT"
authors = ["myFavShrimp <myfavshrimp@tuta.io>"]
readme = "README.md"

[dependencies]
toml = "0.7.0"
thiserror = "1.0"
oorandom = "11.1.3"
getrandom = "0.2.9"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.lightningcss]
version = "=1.0.0-alpha.42"
default-features = false
features = ["grid", "visitor"]

[dependencies.lightningcss-derive]
version = "=1.0.0-alpha.39"

[dependencies.grass]
version = "0.12.4"
default-features = false

[dependencies.once_cell]
version = "1.18.0"
optional = true
