[package]
name = "turf_internals"
version = "0.6.2"
edition = "2021"
description = "The inner workings of turf."
license = "MIT"
authors = ["myFavShrimp <myfavshrimp@tuta.io>"]
readme = "README.md"

[dependencies]
toml = "=0.7.0"
toml_edit = "=0.19.0"
thiserror = "1.0"
oorandom = "11.1.3"
getrandom = "0.2.9"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.lightningcss]
# this version has a wrong dependency declaration which makes builds fail
# version = "=1.0.0-alpha.44"
default-features = false
features = ["grid", "visitor"]
git = "https://github.com/myFavShrimp/lightningcss.git"
rev = "652024bd90c437a2f7908130d72cdabccb55359a"

[dependencies.grass]
version = "0.13.0"
default-features = false

[dependencies.once_cell]
version = "1.18.0"
optional = true
