[package]
name = "turf_macros"
version = "0.4.0"
edition = "2021"
description = "Macros used by turf."
license = "MIT"
authors = ["myFavShrimp <myfavshrimp@tuta.io>"]
readme = "README.md"

[features]
once_cell = ["turf_internals/once_cell"]

[lib]
proc_macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0" }
convert_case = "0.6.0"

[dependencies.turf_internals]
path = "../turf_internals"
version = "0.4.0"
