[package]
name = "load_settings_from_cargo_manifest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.turf]
path = "../../lib/turf"
[dependencies.turf_internals]
path = "../../lib/turf_internals"

[package.metadata.turf]
load_paths = ["variables"]
output_style = "expanded"
