[package]
name = "use_correct_settings_profile_depending_on_build_type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.turf]
path = "../../lib/turf"

[package.metadata.turf]
minify = true
class_name_template = "prod-<original_name>"

[package.metadata.turf-dev]
minify = false
class_name_template = "dev-<original_name>"
